--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     </head>
     <body>
         <div id="main-node"></div>
-        <script src="Main.js">h</script>
+        <script src="Main.js"></script>
+        <script>
+        </script>
     </body>
 </html>
