--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <div id="main-node"></div>
